--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ div.inline-block > span.mr-1.self_center.badge {
   background-color: var(--primary) !important;
 }
 
-a.btn.btn-primary {
+*.btn.btn-primary {
   color: #000 !important;
   background-color:  var(--primary) !important;
   border-color:  var(--primary) !important;
@@ -115,7 +115,7 @@ a.btn.btn-primary {
   vertical-align: moddle !important;  
 }
 
-a.btn.btn-primary:hover {
+*.btn.btn-primary:hover {
   background-color:  var(--terciary) !important;
 }
 
