--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,11 @@
   --terciary: #0a8b4b;
 }
 
+*, ::after, ::before {
+	/* box-sizing: border-box; */
+  --bs-gutter-x:  none; 
+}
+
 .row {
   --bs-gutter-x:  none; 
 }
@@ -57,9 +62,18 @@ a {
   text-decoration: none;
  }
  
- a:hover {
+ a:hover, h6 {
   color: var(--linkcolor);
   font-weight: bolder;
+  }
+
+h5 {
+  color: var(--linkcolor);
+  font-size: 14px;
+  text-align: left;
+  vertical-align: top;
+  
+  padding: 10px;
   }
 
 .topnav {
@@ -69,7 +83,6 @@ a {
   text-decoration: none;
   display: block;
   position: sticky;
-
   text-align: right;
   justify-content: right;
   width: 100%
@@ -97,10 +110,10 @@ div.inline-block > span.mr-1.self_center.badge {
 }
 
 *.btn.btn-primary {
-  color: #000 !important;
+  color: #000;
   background-color:  var(--primary) !important;
   border-color:  var(--primary) !important;
-  margin: 5px !important;
+  /*margin: 5px !important;*/
   padding: 5px 5px 5px 5px !important;
   text-align: center !important;
   vertical-align: middle !important;  
@@ -133,14 +146,41 @@ div.inline-block > span.mr-1.self_center.badge {
 .cardSize {
   padding: 5px;
   display: inline-flex;
-  width: 332px !important;
+  /*width: 332px !important;*/
+  width:fit-content;
+  height:fit-content;
+  max-width:360px;
+  min-height:360px;
   margin-right: 10px;
   margin-bottom: 10px;
 }
 
+.cardSize-code {
+  padding: 5px;
+  display: inline-flex;
+  /*width: 332px !important;*/
+  width:fit-content;
+  height:fit-content;
+  max-width:720px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+
 .kwtdrops{
-  display: flow-root flex !important;
+  display: contents !important;
   vertical-align: middle !important;  
+}
+
+.kwtchartbtn{
+  max-height: 35px !important;
+  margin-left: 15px !important;
+}
+
+*.dash-dropdown {
+  padding: 0px !important;
+  margin: 0px !important;
+  border: 0px !important;  
 }
 
 .card-header {
