--- a/assets/style.css
+++ b/assets/style.css
@@ -99,11 +99,7 @@ li, li::marker {
   padding-left: 15px;
   margin-left:10px;
   margin-bottom:15px;
-  
-
   }
-
-
 
 .social {
   position: fixed;
@@ -222,6 +218,15 @@ div.inline-block > span.mr-1.self_center.badge {
 }
 
 
+*.indicatorlayer, *.trace {
+  padding: 10px !important;
+  margin: 10px !important;
+}
+
+*.annotation-text-g .annotation-text {
+  font-size: 12px !important;
+}
+
 .container-fluid {
   padding: 10px;
 }
@@ -234,7 +239,6 @@ div.inline-block > span.mr-1.self_center.badge {
 
 *.card-header {
   margin: 0px 0px 0px 0px  !important;
-
   text-align:center;
   vertical-align: middle !important;  
   color: var(--terciary);
@@ -255,8 +259,13 @@ div.inline-block > span.mr-1.self_center.badge {
   padding: 20px !important;
 }
 
+text.title {
+ font-size: 12px !important;
+}
+
 .dash-graph {
-  margin: 1px !important;
+  width:100%;
+  height: fit-content;
   box-shadow: 0px 2px 3px black;
 }
 
@@ -275,10 +284,8 @@ div.inline-block > span.mr-1.self_center.badge {
   padding: 5px;
   display: inline-flex;
   /*width: 332px !important;*/
-  width:fit-content;
-  height:fit-content;
+  max-width:100%;
   /*overflow-y:scroll;*/
-  max-width:720px;
   margin-right: 10px;
   margin-bottom: 10px;
 }
