--- a/assets/style.css
+++ b/assets/style.css
@@ -43,6 +43,7 @@
 html {
   margin: 0px 0px 0px 0px !important;
   padding: 0px 0px 0px 0px !important;
+  font-family: Roboto !important;
   font-size: 14px;
   text-align: left;
   color: var(--primary);
@@ -53,6 +54,7 @@ body {
   margin: 0px 0px 0px 0px !important;
   padding: 0px 0px 0px 0px !important;
   background-color: var(--bgColor);
+  font-family: Roboto !important;
   color: var(--primary);
   text-decoration: none;
   text-align: justify;
@@ -88,12 +90,38 @@ h5 {
   padding: 10px;
   }
 
-h6 {
+h6, .tab {
   color: var(--primary);
   font-size: 16px;
   font-weight: 700;
   padding: 0px;
   }
+
+*.tab {
+  background-color: rgba(200, 180, 180, 0.25)  !important;
+  border-color: transparent !important;
+  margin: 0px 5px 0px 5px !important;
+  padding: 5px !important;
+  border-radius: 5px 5px 0px 0px !important;
+}
+
+*.gtitle {
+  border-left-width: 15px !important;
+  border-left-color:var(--success) !important;
+  font-family: Roboto !important;
+  border: 5px !important;
+  border-color: var(--success) !important;
+  font-family: Roboto !important;
+  padding: 10px !important;
+  margin: 10px !important;
+}
+
+*.tab--selected{
+  background-color: white !important;
+  border-top-width: 5px !important;
+  border-bottom-width: 5px !important;
+  border-top-color:var(--success) !important;
+}
 
 li, li::marker {
   padding-left: 15px;
